--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
          <div>===============Empleados===============</div>
-        <form action="insEmpleado">
+        <form action="altaEmpleado.html">
             <input type="submit" value="(2a)Insert new empleado">
         </form>
         <form action="valEmpleado">
