--- a/web/altaEmpleado.html
+++ b/web/altaEmpleado.html
@@ -16,10 +16,9 @@ and open the template in the editor.
             <p>Nombre de usuario:<input type="text" name="nombreusuario"></p>
             <p>Password:<input type="password" name="password"></p>
             <p>Nombre completo:<input type="text" name="nombrecompleto"></p>
-            <p>Telefono:<input type="text" name="telefono"></p>
-            <p>Ciudad:<input type="number" name="ciudad"></p>
-        </form>
-        
-        
+            <p>Telefono:<input type="number" name="telefono"></p>
+            <p>Ciudad:<input type="text" name="ciudad"></p>
+            <input type="submit" value="Alta">
+        </form>  
     </body>
 </html>
